Polished BE endpoint signature